force-app/main/default/objects/pdffiller_sfree__SlatesActivity__c/pdffiller_sfree__SlatesActivity__c.object-meta.xml
<CustomObject>
    <label>SlatesActivity</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SlatesActivity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SlatesActivitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>