force-app/main/default/objects/pdffiller_sfree__SlatesActivity__c/fields/pdffiller_sfree__bulk__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__bulk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>slateBulk</label>
    <referenceTo>pdffiller_sfree__SlateBulk__c</referenceTo>
    <relationshipLabel>SlatesActivitys</relationshipLabel>
    <relationshipName>SlatesActivitys</relationshipName>
    <type>Lookup</type>
</CustomField>