force-app/main/default/objects/pdffiller_sfree__SlatesActivity__c/fields/pdffiller_sfree__createdAt__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__createdAt__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>createdAt</label>
    <type>DateTime</type>
</CustomField>