force-app/main/default/objects/pdffiller_sfree__SlatesActivity__c/fields/pdffiller_sfree__flowId__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__flowId__c</fullName>
    <label>flowId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>