force-app/main/default/objects/pdffiller_sfree__SlatesActivity__c/fields/pdffiller_sfree__objectName__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__objectName__c</fullName>
    <label>objectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>