force-app/main/default/objects/pdffiller_sfree__SlatesActivity__c/fields/pdffiller_sfree__recordId__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__recordId__c</fullName>
    <label>recordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>