force-app/main/default/objects/pdffiller_sfree__SlatesActivity__c/fields/pdffiller_sfree__SystemTagsAdded__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__SystemTagsAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemTagsAdded</label>
    <type>Checkbox</type>
</CustomField>